# text_rpg

./: pyproject.toml  text_rpg.py
text_rpg/: base_event.py  event_manager.py  game_state_manager.py  game_ui.py  text_input_handler.py  text_output.py  text_output_handler.py  text_parser.py  text_rpg.py
text_rpg/events/: base_event.py  io_events.py  system_events.py
